[gd_scene load_steps=18 format=2]

[ext_resource path="res://WorldRelated/AbstractWorldSlice.tscn" type="PackedScene" id=1]
[ext_resource path="res://ObjectsRelated/TilesRelated/BaseTileSet.tscn" type="PackedScene" id=2]
[ext_resource path="res://WorldRelated/WorldSlices/Stage_002/Level06_Hard/WorldSlice_Stage02_06_Hard.gd" type="Script" id=3]
[ext_resource path="res://ObjectsRelated/Pickupables/Subs/Battery/Pickupable_Battery.tscn" type="PackedScene" id=4]
[ext_resource path="res://ObjectsRelated/Objects/Imps/InteractableButton/Object_InteractableButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://ObjectsRelated/TilesRelated/TileAssets/UncollidablesTileSet.tres" type="TileSet" id=6]
[ext_resource path="res://ObjectsRelated/Portals/Portal.tscn" type="PackedScene" id=7]
[ext_resource path="res://AreaRegionRelated/Subs/PlayerCaptureAreaRegion/PlayerCaptureAreaRegion.tscn" type="PackedScene" id=8]
[ext_resource path="res://AreaRegionRelated/Subs/PlayerDetectionAreaRegion/PlayerDetectionAreaRegion.tscn" type="PackedScene" id=9]
[ext_resource path="res://AreaRegionRelated/Subs/PDAR_MapBounds/PDAR_MapBounds.tscn" type="PackedScene" id=10]
[ext_resource path="res://ObjectsRelated/Pickupables/Subs/Coin/Pickupables_Coin.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 14 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 490.5, 406 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 75, 9.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 769, 214 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 265.5, 198.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 518, 479.5 )

[node name="WorldSlice_Stage02_06" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="BaseTileSet_Normal" parent="TileContainer" index="0" instance=ExtResource( 2 )]

[node name="TileMap" parent="TileContainer/BaseTileSet_Normal" index="0"]
tile_data = PoolIntArray( -851930, 14, 196608, -786394, 14, 262144, -720858, 14, 262144, -655322, 14, 327680, -524285, 14, 4, -458749, 14, 262144, -393213, 14, 262144, -327677, 14, 262144, -262141, 14, 262144, -262138, 14, 262146, -262137, 14, 262147, -262136, 14, 262147, -262135, 14, 262147, -262134, 14, 262147, -262133, 14, 262147, -262132, 14, 4, -196605, 14, 262144, -196596, 14, 262144, -131069, 14, 327680, -131060, 14, 262144, -65524, 14, 262144, 12, 14, 262144, 65548, 14, 262144, 131084, 14, 262144, 196620, 14, 327680 )

[node name="BaseTileSet_Energized" parent="TileContainer" index="1" instance=ExtResource( 2 )]
energy_mode = 1

[node name="TileMap" parent="TileContainer/BaseTileSet_Energized" index="0"]
modulate = Color( 1, 0.968627, 0.172549, 1 )
tile_data = PoolIntArray( -1245181, 14, 2, -1245180, 14, 262147, -1245179, 14, 262147, -1245178, 14, 262147, -1245177, 14, 262147, -1245176, 14, 262147, -1245175, 14, 262147, -1245174, 14, 262147, -1245173, 14, 262147, -1245172, 14, 262147, -1245171, 14, 262147, -1245170, 14, 262147, -1245169, 14, 262147, -1245168, 14, 262147, -1245167, 14, 262147, -1245166, 14, 262147, -1245165, 14, 262147, -1245164, 14, 4, -1179645, 14, 262144, -1179628, 14, 262144, -1179619, 14, 2, -1179618, 14, 262147, -1179617, 14, 262147, -1179616, 14, 4, -1114109, 14, 262144, -1114092, 14, 262144, -1114083, 14, 262144, -1114080, 14, 262144, -983066, 14, 2, -983065, 14, 262147, -983064, 14, 262147, -983063, 14, 262147, -983062, 14, 262147, -983061, 14, 262147, -983060, 14, 262147, -983059, 14, 262147, -983058, 14, 262147, -983057, 14, 262147, -983056, 14, 4, -1048573, 14, 262144, -1048556, 14, 327680, -1048547, 14, 262144, -1048544, 14, 262144, -917530, 14, 262144, -917520, 14, 262144, -983037, 14, 262144, -983011, 14, 262144, -983008, 14, 262144, -851994, 14, 262144, -851984, 14, 262144, -917501, 14, 262144, -917490, 14, 2, -917489, 14, 262147, -917488, 14, 262147, -917487, 14, 262148, -917483, 14, 262146, -917482, 14, 262147, -917481, 14, 262147, -917480, 14, 262147, -917479, 14, 262147, -917478, 14, 262147, -917477, 14, 262147, -917476, 14, 262147, -917475, 14, 131076, -917472, 14, 131074, -917471, 14, 262147, -917470, 14, 262147, -917469, 14, 262147, -917468, 14, 262147, -917467, 14, 262147, -917466, 14, 262147, -917465, 14, 262147, -917464, 14, 262147, -917463, 14, 4, -786458, 14, 262144, -786448, 14, 262144, -851965, 14, 262144, -851954, 14, 262144, -851927, 14, 262144, -720922, 14, 262144, -720912, 14, 262144, -720907, 14, 2, -720906, 14, 262147, -720905, 14, 262147, -720904, 14, 262147, -720903, 14, 262147, -720902, 14, 262147, -720901, 14, 262147, -720900, 14, 262147, -720899, 14, 262147, -720898, 14, 262147, -720897, 14, 262147, -786432, 14, 262147, -786431, 14, 262147, -786430, 14, 262147, -786429, 14, 131076, -786426, 14, 262146, -786425, 14, 262147, -786424, 14, 262147, -786423, 14, 262147, -786422, 14, 262147, -786421, 14, 262147, -786420, 14, 262147, -786419, 14, 262147, -786418, 14, 131076, -786391, 14, 262144, -655386, 14, 262144, -655381, 14, 262146, -655380, 14, 262147, -655379, 14, 262147, -655378, 14, 262147, -655377, 14, 262147, -655376, 14, 131074, -655375, 14, 262147, -655374, 14, 262147, -655373, 14, 262147, -655372, 14, 262147, -655371, 14, 131076, -720861, 14, 196608, -720855, 14, 262144, -589850, 14, 262144, -655325, 14, 262144, -655319, 14, 262144, -524314, 14, 262144, -589789, 14, 262144, -589783, 14, 262144, -458778, 14, 131074, -458777, 14, 262147, -458776, 14, 262147, -458775, 14, 262147, -458774, 14, 262147, -458773, 14, 262147, -458772, 14, 262147, -458771, 14, 262147, -458770, 14, 262147, -458769, 14, 262147, -458768, 14, 262147, -458767, 14, 262147, -458766, 14, 262147, -458765, 14, 262147, -458764, 14, 262147, -458763, 14, 262147, -458762, 14, 262147, -458761, 14, 262147, -458760, 14, 262147, -458759, 14, 262147, -458758, 14, 262147, -458757, 14, 262147, -458756, 14, 262147, -458755, 14, 262147, -458754, 14, 262147, -458753, 14, 262147, -524288, 14, 262147, -524287, 14, 262147, -524286, 14, 262147, -524282, 14, 262146, -524281, 14, 262147, -524280, 14, 262147, -524279, 14, 262147, -524278, 14, 262147, -524277, 14, 262147, -524276, 14, 262147, -524275, 14, 262147, -524274, 14, 4, -524253, 14, 262144, -524247, 14, 262144, -458738, 14, 262144, -458717, 14, 262144, -458711, 14, 131074, -458710, 14, 262147, -458709, 14, 4, -393202, 14, 262144, -393181, 14, 327680, -393173, 14, 262144, -327666, 14, 262144, -327637, 14, 262144, -262130, 14, 262144, -262101, 14, 262144, -196594, 14, 262144, -196567, 14, 2, -196566, 14, 262147, -196565, 14, 131076, -131058, 14, 262144, -131031, 14, 262144, -65522, 14, 262144, -65495, 14, 262144, 14, 14, 262144, 41, 14, 262144, 65550, 14, 262144, 65577, 14, 262144, 196606, 14, 262146, 196607, 14, 262147, 131072, 14, 262147, 131073, 14, 262147, 131074, 14, 262147, 131075, 14, 262147, 131076, 14, 262147, 131077, 14, 262147, 131078, 14, 262147, 131079, 14, 262147, 131080, 14, 262148, 131086, 14, 262144, 131113, 14, 262144, 196622, 14, 131074, 196623, 14, 262147, 196624, 14, 262147, 196625, 14, 262147, 196626, 14, 262147, 196627, 14, 262147, 196628, 14, 262147, 196629, 14, 4, 196633, 14, 2, 196634, 14, 4, 196649, 14, 262144, 262165, 14, 262144, 262169, 14, 262144, 262170, 14, 262144, 262185, 14, 262144, 327701, 14, 262144, 327705, 14, 262144, 327706, 14, 262144, 327721, 14, 262144, 393237, 14, 262144, 393241, 14, 262144, 393242, 14, 262144, 393257, 14, 262144, 458773, 14, 131074, 458774, 14, 262147, 458775, 14, 262147, 458776, 14, 262147, 458777, 14, 131076, 458778, 14, 262144, 458793, 14, 262144, 524314, 14, 262144, 524329, 14, 262144, 589850, 14, 131074, 589851, 14, 262147, 589852, 14, 262147, 589853, 14, 262147, 589854, 14, 262147, 589855, 14, 262147, 589856, 14, 262147, 589857, 14, 262147, 589858, 14, 262147, 589859, 14, 262147, 589860, 14, 262147, 589861, 14, 262147, 589862, 14, 262147, 589863, 14, 262147, 589864, 14, 262147, 589865, 14, 131076 )

[node name="BaseTileSet_Grounded" parent="TileContainer" index="2" instance=ExtResource( 2 )]
energy_mode = 2

[node name="TileMap" parent="TileContainer/BaseTileSet_Grounded" index="0"]
modulate = Color( 0.427451, 0.231373, 0, 1 )

[node name="BaseTileSet_Blue" parent="TileContainer" index="3" instance=ExtResource( 2 )]

[node name="TileMap" parent="TileContainer/BaseTileSet_Blue" index="0"]
modulate = Color( 0.12549, 0.780392, 0.886275, 1 )
tile_data = PoolIntArray( -851953, 8, 0, -851952, 8, 0, -851951, 8, 0, -851947, 8, 0, -851946, 8, 0, -851945, 8, 0, -851944, 8, 0, -851943, 8, 0, -851942, 8, 0, -851941, 8, 0, -851940, 8, 0, -851939, 8, 0, -851936, 8, 0, -851935, 8, 0, -851934, 8, 0, -851933, 8, 0, -851932, 8, 0, -851931, 8, 0, -786417, 8, 0, -786397, 8, 0, -786396, 8, 0, -786395, 8, 0, -720881, 8, 0, -720860, 8, 0, -720859, 8, 0, -655345, 8, 0, -655324, 8, 0, -655323, 8, 0, -589809, 8, 0, -589788, 8, 0, -524273, 8, 0, -524252, 8, 0, -524249, 8, 0, -524248, 8, 0, -458737, 8, 0, -458716, 8, 0, -458712, 8, 0, -393201, 8, 0, -393180, 8, 0, -393179, 8, 0, -393176, 8, 0, -327665, 8, 0, -327640, 8, 0, -262129, 8, 0, -262104, 8, 0, -196593, 8, 0, -131057, 8, 0, -65521, 8, 0, -65499, 8, 0, 15, 8, 0, 37, 8, 0, 40, 8, 0, 65551, 8, 0, 65573, 8, 0, 65576, 8, 0, 131087, 8, 0, 131088, 8, 0, 131089, 8, 0, 131090, 8, 0, 131091, 8, 0, 131092, 8, 0, 131093, 8, 0, 131099, 8, 0, 131112, 8, 0, 196635, 8, 0, 196648, 8, 0, 262171, 8, 0, 262174, 8, 0, 262180, 8, 0, 262181, 8, 0, 262182, 8, 0, 262183, 8, 0, 262184, 8, 0, 327707, 8, 0, 327716, 8, 0, 327720, 8, 0, 393243, 8, 0, 393247, 8, 0, 393256, 8, 0, 458779, 8, 0, 458783, 8, 0, 458792, 8, 0, 524315, 8, 0, 524316, 8, 0, 524317, 8, 0, 524318, 8, 0, 524319, 8, 0, 524320, 8, 0, 524321, 8, 0, 524322, 8, 0, 524323, 8, 0, 524324, 8, 0, 524325, 8, 0, 524326, 8, 0, 524327, 8, 0, 524328, 8, 0 )

[node name="BaseTileSet_GreenN" parent="TileContainer" index="4" instance=ExtResource( 2 )]

[node name="TileMap" parent="TileContainer/BaseTileSet_GreenN" index="0"]
modulate = Color( 0.301961, 1, 0.133333, 1 )
tile_data = PoolIntArray( -786400, 8, 0, -786399, 8, 0, -720864, 8, 0, -720863, 8, 0, -655334, 8, 0, -655333, 8, 0, -655328, 8, 0, -655327, 8, 0, -589803, 8, 0, -589802, 8, 0, -589801, 8, 0, -589798, 8, 0, -589797, 8, 0, -589796, 8, 0, -589795, 8, 0, -589794, 8, 0, -589793, 8, 0, -589792, 8, 0, -589791, 8, 0, -589790, 8, 0, -524267, 8, 0, -524266, 8, 0, -524265, 8, 0 )

[node name="BaseTileSet_Uncolls" parent="TileContainer" index="5" instance=ExtResource( 2 )]

[node name="TileMap" parent="TileContainer/BaseTileSet_Uncolls" index="0"]
tile_set = ExtResource( 6 )
tile_data = PoolIntArray( -917529, 12, 0, -917528, 12, 0, -917527, 12, 0, -917526, 12, 0, -917525, 12, 0, -917524, 12, 0, -917523, 12, 0, -917522, 12, 0, -917521, 12, 0, -851993, 12, 0, -851992, 12, 0, -851991, 12, 0, -851990, 12, 0, -851988, 12, 0, -851987, 12, 0, -851986, 12, 0, -851985, 12, 0, -786457, 12, 0, -786456, 12, 0, -786455, 12, 0, -786451, 12, 0, -786450, 12, 0, -786449, 12, 0, -720921, 12, 0, -720920, 12, 0, -720914, 12, 0, -720913, 12, 0, -655385, 12, 0, -655384, 12, 0, -655383, 12, 0, -655370, 12, 0, -655369, 12, 0, -655368, 12, 0, -655367, 12, 0, -655366, 12, 0, -655365, 12, 0, -655364, 12, 0, -655363, 12, 0, -655362, 12, 0, -655361, 12, 0, -720896, 12, 0, -720895, 12, 0, -720894, 12, 0, -720893, 12, 0, -720892, 12, 0, -720891, 12, 0, -720890, 12, 0, -720889, 12, 0, -720888, 12, 0, -720887, 12, 0, -720886, 12, 0, -720885, 12, 0, -720884, 12, 0, -720883, 12, 0, -720882, 12, 0, -589849, 12, 0, -589848, 12, 0, -589847, 12, 0, -589846, 12, 0, -589844, 12, 0, -589843, 12, 0, -589842, 12, 0, -589841, 12, 0, -589840, 12, 0, -589839, 12, 0, -589838, 12, 0, -589837, 12, 0, -589836, 12, 0, -589835, 12, 0, -589834, 12, 0, -589833, 12, 0, -589832, 12, 0, -589831, 12, 0, -589830, 12, 0, -589829, 12, 0, -589828, 12, 0, -589827, 12, 0, -589826, 12, 0, -589825, 12, 0, -655360, 12, 0, -655359, 12, 0, -655358, 12, 0, -655357, 12, 0, -655356, 12, 0, -655355, 12, 0, -655354, 12, 0, -655353, 12, 0, -655352, 12, 0, -655351, 12, 0, -655350, 12, 0, -655349, 12, 0, -655348, 12, 0, -655347, 12, 0, -655346, 12, 0, -524313, 12, 0, -524312, 12, 0, -524311, 12, 0, -524310, 12, 0, -524309, 12, 0, -524308, 12, 0, -524307, 12, 0, -524306, 12, 0, -524305, 12, 0, -524304, 12, 0, -524303, 12, 0, -524302, 12, 0, -524301, 12, 0, -524300, 12, 0, -524299, 12, 0, -524298, 12, 0, -524297, 12, 0, -524296, 12, 0, -524295, 12, 0, -524294, 12, 0, -524293, 12, 0, -524292, 12, 0, -524291, 12, 0, -524290, 12, 0, -524289, 12, 0, -589824, 12, 0, -589823, 12, 0, -589822, 12, 0, -589821, 12, 0, -589820, 12, 0, -589819, 12, 0, -589818, 12, 0, -589817, 12, 0, -589816, 12, 0, -589815, 12, 0, -589814, 12, 0, -589813, 12, 0, -589812, 12, 0, -589811, 12, 0, -589810, 12, 0 )

[node name="BaseTileSet_RedN" parent="TileContainer" index="6" instance=ExtResource( 2 )]

[node name="TileMap" parent="TileContainer/BaseTileSet_RedN" index="0"]
modulate = Color( 0.996078, 0.247059, 0.247059, 1 )
tile_data = PoolIntArray( -720895, 7, 0, -720890, 7, 0, -720883, 7, 0, -655359, 7, 65536, -655354, 7, 65536, -655347, 7, 65536, -655339, 8, 0, -655338, 8, 0, -655337, 8, 0, -655336, 8, 0, -589823, 7, 131072, -589818, 7, 131072, -589811, 7, 131072, -589800, 8, 0, -524264, 8, 0, -524263, 8, 0, -524262, 8, 0, -524261, 8, 0, -524260, 8, 0, -524259, 8, 0, -524258, 8, 0, -524257, 8, 0, -524256, 8, 0, -524255, 8, 0, -524254, 8, 0, -327655, 8, 0, -327654, 8, 0, -262119, 8, 0, -262118, 8, 0, -196583, 8, 0, -196582, 8, 0, -196568, 8, 0, -131047, 8, 0, -131046, 8, 0, -131032, 8, 0, -65511, 8, 0, -65510, 8, 0, -65503, 8, 0, -65502, 8, 0, -65498, 8, 0, -65497, 8, 0, -65496, 8, 0, 25, 8, 0, 26, 8, 0, 65561, 8, 0, 65562, 8, 0, 131097, 8, 0, 131098, 8, 0 )

[node name="BaseTileSet" parent="TileContainer" index="7" instance=ExtResource( 2 )]

[node name="TileMap" parent="TileContainer/BaseTileSet" index="0"]
tile_set = ExtResource( 6 )
tile_data = PoolIntArray( -917521, 13, 1, -851989, 12, 0, -851985, 13, 1, -786455, 12, 0, -786454, 12, 0, -786453, 12, 0, -786452, 12, 0, -786451, 12, 0, -786449, 13, 131075, -720919, 12, 0, -720918, 12, 0, -720917, 12, 0, -720916, 12, 0, -720915, 12, 0, -720913, 13, 1, -655382, 12, 0, -655377, 13, 1, -655370, 13, 1, -589845, 12, 0, -589841, 13, 3, -589834, 13, 1, -524305, 13, 65538, -524304, 13, 0, -524303, 13, 131072, -524302, 13, 0, -524301, 13, 0, -524300, 13, 2, -524299, 13, 0, -524298, 13, 65537 )

[node name="BaseTileSet_UncollGlowing" parent="TileContainer" index="8" instance=ExtResource( 2 )]
has_glowables = true

[node name="TileMap" parent="TileContainer/BaseTileSet_UncollGlowing" index="0"]
tile_set = ExtResource( 6 )
tile_data = PoolIntArray( -851992, 14, 0, -851986, 14, 0, -589848, 14, 0, -589842, 14, 0, -589833, 14, 0, -589829, 14, 0, -589825, 14, 0, -655357, 14, 0, -655353, 14, 0, -655349, 14, 0 )

[node name="PlayerCaptureAreaRegion" parent="AreaRegionContainer" index="0" instance=ExtResource( 8 )]
position = Vector2( -431, -422 )

[node name="PlayerDetectionAreaRegion_FastCheckpoint" parent="AreaRegionContainer" index="1" instance=ExtResource( 9 )]
position = Vector2( 578, -466 )

[node name="CollisionShape2D" parent="AreaRegionContainer/PlayerDetectionAreaRegion_FastCheckpoint" index="0"]
position = Vector2( 47, 33 )
shape = SubResource( 1 )

[node name="PDAR_SpecialCamAngleActiveArea" parent="AreaRegionContainer" index="2" instance=ExtResource( 9 )]
position = Vector2( 569, 37 )

[node name="CollisionShape2D" parent="AreaRegionContainer/PDAR_SpecialCamAngleActiveArea" index="0"]
visible = false
position = Vector2( 349.5, -98 )
shape = SubResource( 2 )

[node name="PDAR_SpecialCamGiver" parent="AreaRegionContainer" index="3" instance=ExtResource( 9 )]
position = Vector2( 562, 65 )

[node name="CollisionShape2D" parent="AreaRegionContainer/PDAR_SpecialCamGiver" index="0"]
position = Vector2( 65, 22.5 )
shape = SubResource( 3 )

[node name="PDAR_MapBounds" parent="AreaRegionContainer" index="4" instance=ExtResource( 10 )]

[node name="CollisionShape2D" parent="AreaRegionContainer/PDAR_MapBounds" index="0"]
position = Vector2( -81, -418 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaRegionContainer/PDAR_MapBounds" index="1"]
position = Vector2( 152.5, -26.5 )
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AreaRegionContainer/PDAR_MapBounds" index="2"]
position = Vector2( 943, -115.5 )
shape = SubResource( 6 )

[node name="Object_InteractableButton" parent="ObjectContainer" index="0" instance=ExtResource( 5 )]
position = Vector2( 1284, -408 )
rotation = 3.14159
body_mode_to_use = 1
tileset_01_to_register_in_toggle__path = NodePath("../../TileContainer/BaseTileSet_Blue")
pressable_count = 2

[node name="Pickupable_Battery" parent="ObjectContainer" index="1" instance=ExtResource( 4 )]
position = Vector2( 1249, 111 )

[node name="Pickupable_Battery2" parent="ObjectContainer" index="2" instance=ExtResource( 4 )]
position = Vector2( 925, 217 )
battery_type = 2

[node name="Pickupable_Battery3" parent="ObjectContainer" index="3" instance=ExtResource( 4 )]
position = Vector2( 1163, 41 )
battery_type = 2

[node name="Object_InteractableButton2" parent="ObjectContainer" index="4" instance=ExtResource( 5 )]
position = Vector2( 1247, 168 )
rotation = 3.14159
body_mode_to_use = 1
tileset_01_to_register_in_toggle__path = NodePath("../../TileContainer/BaseTileSet_GreenN")
button_color = 1
pressable_count = 2

[node name="Object_InteractableButton3" parent="ObjectContainer" index="5" instance=ExtResource( 5 )]
position = Vector2( 1008, -536 )
rotation = 3.14159
body_mode_to_use = 1
tileset_01_to_register_in_toggle__path = NodePath("../../TileContainer/BaseTileSet_RedN")
button_color = 0

[node name="Portal" parent="ObjectContainer" index="6" instance=ExtResource( 7 )]
position = Vector2( -656, -368 )
portal_color = 3
is_scene_transition_type_portal = true

[node name="Pickupables_Coin" parent="CoinsContainer" index="0" instance=ExtResource( 11 )]
position = Vector2( 1071, 12 )

[node name="SpawnPosition2D" type="Position2D" parent="PlayerSpawnCoordsContainer" index="0"]
position = Vector2( 39, 48 )
__meta__ = {
"_gizmo_extents_": 16.0
}

[node name="MiscContainer" type="Node2D" parent="." index="6"]

[node name="FastSpawnPos2D" type="Position2D" parent="MiscContainer" index="0"]
position = Vector2( 624, 80 )

[node name="SpecialCamPos2D" type="Position2D" parent="MiscContainer" index="1"]
position = Vector2( 943, -156 )

[connection signal="player_entered_in_area" from="AreaRegionContainer/PlayerDetectionAreaRegion_FastCheckpoint" to="." method="_on_PlayerDetectionAreaRegion_FastCheckpoint_player_entered_in_area"]
[connection signal="player_entered_in_area" from="AreaRegionContainer/PDAR_SpecialCamAngleActiveArea" to="." method="_on_PDAR_SpecialCamAngleActiveArea_player_entered_in_area"]
[connection signal="player_exited_in_area" from="AreaRegionContainer/PDAR_SpecialCamAngleActiveArea" to="." method="_on_PDAR_SpecialCamAngleActiveArea_player_exited_in_area"]
[connection signal="player_entered_in_area" from="AreaRegionContainer/PDAR_SpecialCamGiver" to="." method="_on_PDAR_SpecialCamGiver_player_entered_in_area"]

[editable path="TileContainer/BaseTileSet_Normal"]
[editable path="TileContainer/BaseTileSet_Energized"]
[editable path="TileContainer/BaseTileSet_Grounded"]
[editable path="TileContainer/BaseTileSet_Blue"]
[editable path="TileContainer/BaseTileSet_GreenN"]
[editable path="TileContainer/BaseTileSet_Uncolls"]
[editable path="TileContainer/BaseTileSet_RedN"]
[editable path="TileContainer/BaseTileSet"]
[editable path="TileContainer/BaseTileSet_UncollGlowing"]
[editable path="AreaRegionContainer/PlayerDetectionAreaRegion_FastCheckpoint"]
[editable path="AreaRegionContainer/PDAR_SpecialCamAngleActiveArea"]
[editable path="AreaRegionContainer/PDAR_SpecialCamGiver"]
[editable path="AreaRegionContainer/PDAR_MapBounds"]
